# RustRealtimeExample

./: .gitignore  Cargo.toml  README.md  build_run.sh  protocol.md  setup.sh
controller/: app.js  index.html
controlpad_server/: README.md  controlpad_web_server.js  start.sh
src/: main.rs  my_card_game.rs  progress.rs  resources.rs  standard_deck.rs
src/my_card_game/: draw_my_card_game.rs
