[package]
name = "rust_cards_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
glam = { version = "0.24", features = ["mint"] }
rand = "0.8"

controlpad_server = { git = "ssh://git@github.com:/RecBox-Games/ControlpadServer.git" } #, tag = "v0.1.0" }